2009-11-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move prepare_clean_working_directory into the LandingSequence
        https://bugs.webkit.org/show_bug.cgi?id=31743

        * Scripts/bugzilla-tool:
        * Scripts/modules/landingsequence.py:

2009-11-20  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        NPN_ReloadPlugins does not reload the page even if reloadPages is true.
        https://bugs.webkit.org/show_bug.cgi?id=30460

        Added code for calling NPN_ReloadPlugins with reloadPages true and false.

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (pluginInvoke):

2009-11-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Pass the port information to the child process
        https://bugs.webkit.org/show_bug.cgi?id=31736

        We need to do this so the child process knows what to build!

        * Scripts/bugzilla-tool:
        * Scripts/modules/landingsequence.py:
        * Scripts/modules/webkitport.py:
        * Scripts/modules/webkitport_unittest.py:

2009-11-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Support Qt port in build-queue
        https://bugs.webkit.org/show_bug.cgi?id=31733

        * Scripts/bugzilla-tool:

2009-11-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Implement a build-queue
        https://bugs.webkit.org/show_bug.cgi?id=31725

        Currently this just builds the first 10 patches in the review queue.
        We'll want to do something smarter soon.

        * Scripts/bugzilla-tool:

2009-11-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Make commit-queue and style-queue show up in help
        https://bugs.webkit.org/show_bug.cgi?id=31724

        We need to store their names on their class to make these commands
        properly register themselves with MultiCommandTool.
