@@ -133,6 +133,29 @@ class CheckStyle(Command):
         self.check_style(attachment, options, tool)
 
 
+class BuildSequence(ConditionalLandingSequence):
+    def __init__(self, options, tool):
+        ConditionalLandingSequence.__init__(self, None, options, tool)
+
+    def run(self):
+        self.clean()
+        self.update()
+        self.build()
+
+
+class Build(Command):
+    name = "build"
+    def __init__(self):
+        options = WebKitLandingScripts.cleaning_options()
+        options += WebKitLandingScripts.build_options()
+        options += WebKitLandingScripts.land_options()
+        Command.__init__(self, "Updates working copy and does a build.", "", options)
+
+    def execute(self, options, args, tool):
+        sequence = BuildSequence(options, tool)
+        sequence.run_and_handle_errors()
+
+
 class ApplyAttachment(Command):
     name = "apply-attachment"
     def __init__(self):
@@ -763,11 +786,14 @@ class BuildQueue(AbstractTryQueue):
         self.port = WebKitPort.port(self.options)
 
     def should_proceed_with_work_item(self, patch):
-        # FIXME: We should check whether we're currently able to build!
+        try:
+            self.run_bugzilla_tool(["build", self.port.flag(), "--force-clean", "--quiet"])
+        except ScriptError, e:
+            return (False, "Unable to perform a build.", None)
         return (True, "Building patch %s on bug %s." % (patch["id"], patch["bug_id"]), patch["bug_id"])
 
     def process_work_item(self, patch):
-        self.run_bugzilla_tool(["build-attachment", self.port.flag(), "--force-clean", patch["id"]])
+        self.run_bugzilla_tool(["build-attachment", self.port.flag(), "--force-clean", "--quiet", "--no-update", patch["id"]])
 
 
 class BugzillaTool(MultiCommandTool):
